@@ -39,7 +39,7 @@ values. Another constructor (see below) is provided when this is not
 considered appropriate. Random values between tt(min) and tt(max) (inclusive)
 are returned.
 
-    itb(IRandStream(int min, int max, int seed))
+    itb(IRandStream(int min, int max, long seed))
     This bf(FBB::IRandStream()) constructor initializes the random
 generator. The seed is used to initialize the random number generator. To start
 the random generator at some unpredictable point, tt(time(0)) could be used.
