@@ -12,7 +12,7 @@ class IRandStream: private Randbuffer, public std::istream
     public:    
         explicit IRandStream(int max);
         IRandStream(int min, int max);
-        IRandStream(int min, int max, int seed);
+        IRandStream(int min, int max, long seed);
 };
 
 #include "irandstream1.f"
