@@ -1,0 +1,3 @@
+#define LIBRARY             "randbuffer"
+
+#include "../icmconf"
