@@ -14,7 +14,7 @@ class Randbuffer: public std::streambuf
     std::unique_ptr<char> d_buffer;
 
     public:
-        Randbuffer(int min, int max, size_t seed);
+        Randbuffer(int min, int max, long seed);
 
     private:
         virtual int underflow();
