@@ -9,6 +9,8 @@ bobcat (4.03.00) WIP
   * The class Signal now uses 'sigaction' instead of the (deprecated) function
     'signal' 
 
+  * IRandStream uses type 'long' for its seed argument to match time(0)'s
+    return type
 
 -----------------------------------------------
     
